# polymarket-event-injestor

./: .gitignore  CLAUDE.md  DATA_FLOW.md  Dockerfile  Dockerfile.correlator  New-Architecture.md  README.md  app.env.example  data.md  docker-compose.yml  docs.md  eventedge-ai.md.md  new-design.md  polymarket-kafka-assignment.md  polymarket-kafka-tasks.md  pyproject.toml  seed_subscriptions.py  suggestions.md  test_conviction_event.py
.claude/: settings.local.json
clientportal.gw/root/: conf.yaml
db/: app_schema.sql  history_schema.sql
observability/prometheus/: prometheus.yml
pgadmin/: servers.json
scripts/: check_market_status.py  configure_groq.sh  debug_ids.py  find_active_markets.py  init-couchbase.sh  publish_test_events.py  resolve_all_users.py  resolve_category_subscriptions.py  seed_hypotheses.py  seed_sample_events.py  seed_stock_subscriptions.py  seed_subscriptions.py  seed_test_user.py  test-ollama-weather.js  test_chat_e2e.py  test_conviction_event.py
src/ai_correlator/: Dockerfile  __main__.py  backtester.py  correlator.py  fan_out.py  prompt.py  requirements.txt
src/auto_trader/: Dockerfile  __main__.py  executor.py  requirements.txt
src/backtester/: __main__.py  backtester.py
src/config/: market_categories.py
src/data_init/: Dockerfile  bootstrap.py  requirements.txt
src/event_detectors/: __main__.py  pg_subscription_manager.py
src/event_processors/: __main__.py  subscription_fan_out.py
src/feature_store/: Dockerfile  builder.py  cleanup.py  historical_backfill.py  label_filler.py  normalizer.py  requirements.txt  scheduler.py
src/historical/: Dockerfile  __main__.py  ingestor.py  requirements.txt
src/ml/: Dockerfile  __main__.py  requirements.txt  rule_scorer.py  train.py
src/observability/: __init__.py  metrics.py  pro_logging.py
src/polymarket_kafka/: __main__.py  config.py  conviction.py  data_source.py  discord_logging.py  event_builder.py  kafka_client.py  models.py  runner.py  subscription_manager.py  test.py  test2.py
src/stock_analytics_kafka/: __main__.py  config.py  discord_logging.py  event_builder.py  runner.py  signal_detector.py
src/stock_news_kafka/: __main__.py  config.py  data_source.py  discord_logging.py  event_builder.py  kafka_client.py  models.py  runner.py
src/strategy_injestor/: __init__.py  __main__.py  config.py  couchbase_client.py  discord_logging.py  runner.py  (+1 more)
tests/: __init__.py  test_data_source.py  test_runner.py
(+261 files in other folders)
