[project]
name = "eventedge-ai"
version = "0.3.0"
description = "Algo trading system — three signal pipelines, backtester, Claude AI correlator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Kafka
    "confluent-kafka>=2.3.0",
    # PostgreSQL (app DB + TimescaleDB)
    "asyncpg>=0.29",
    # Redis
    "redis>=5.0",
    # AI (Groq via openai-compatible SDK)
    "openai>=1.30",
    # Data sources
    "yfinance>=0.2.40",
    "requests>=2.32.0",
    "certifi>=2024.0.0",
    "fredapi>=0.5",
    # Data processing
    "pandas>=2.2",
    "ta>=0.11",
    "numpy>=1.26",
    # Schema / config
    "pydantic>=2.12",
    "python-dotenv>=1.0.0",
    # Scheduling (historical ingestor)
    "schedule>=1.2",
    # Observability
    "prometheus-client>=0.21.1",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true

[tool.pyright]
venvPath = "."
venv = ".venv"